--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gapless.js": "^1.0.0",
     "ionicons": "^7.0.0",
     "pinia": "^2.1.7",
+    "uuid": "^10.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
