--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/pwa-elements": "^3.3.0",
